z-index-fixes-final-v-1.0

--- a/css/style.css
+++ b/css/style.css
@@ -366,11 +366,6 @@ input.total-marks {
     outline: none;
 }
 
-.upload-form-fieldset {
-    padding: 8px;
-    border-radius: 8px;
-}
-
 .upload-form-container {
     display: table;
     top: 16px;
@@ -380,6 +375,12 @@ input.total-marks {
     transform: translateX(-50%);
     background-color: whitesmoke;
     margin-bottom: 24px;
+    border-radius: 8px;
+    z-index: -1;
+}
+
+.upload-form-fieldset {
+    padding: 8px;
     border-radius: 8px;
 }
 
